# mukham

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Readme.md  build.sh  compile_commands.json  debug_blazeface.cpp  main.cpp  sdl2-config.cmake
.github/workflows/: cmake.yml  linux_build.yml  main.yml  pi4_build.yml  release.yml  release_build.yml  windows_build.yml
assets/: readme.md
docker/: Dockerfile.pi4
models/: rfb_model.tar
models/facemesh/: face_landmark.lib
models/mtcnn/: det4.caffemodel  det4.prototxt
models/open_close_eye/: open_close_eye_model.tflite
models/ultraface/: RFB-320.caffemodel  RFB-320.prototxt  slim-320.caffemodel  slim-320.prototxt
models/yunet/: Readme.md
scripts/: .ycm_extra_conf.py  BlazeFace.ipynb  Deeplabv3.ipynb  Dlib_face_detection.ipynb  FaceMesh.ipynb  GenderAge.ipynb  InsightLandmarks.ipynb  MLP_age_gender.ipynb  MODNet.ipynb  MTCNN.ipynb  OpenCloseEye.ipynb  SelfieSegmentation.ipynb  Ultraface.ipynb  YUNet.ipynb  convert.py  convert_blazeface.py  convert_facemesh.py  requirements.txt  tune_network_arm.ipynb
src/: dlib_face_detection.cpp  dlib_face_detection.h  iou.hpp  main.cpp  opencv_face_detection.cpp  opencv_face_detection.h  tvm_blazeface.cpp  tvm_blazeface.h  tvm_deeplab_segmentation.cpp  tvm_deeplab_segmentation.h  tvm_facemesh.cpp  tvm_facemesh.h  tvm_ultraface.h
src/models/: Detection.h  FaceDetector.h  UltraFaceModel.cpp  UltraFaceModel.h
test/: blazeface_test.cpp
test_video/: Readme.txt
